# records-rs

./: Cargo.toml  LICENSE  README.md
examples/: generics.rs  simple.rs
src/: lib.rs
